[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = "Django tree menu"
authors = ["kvitee <kvitee41@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.358"
Django = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
